UX-08: Fix language picker dropdown clipping at 375px viewports
Add global max-width constraint on mat-select overlay panel and
mobile max-width on the lang-picker element to prevent dropdown
from being clipped on narrow viewports.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -147,6 +147,7 @@ a:hover {
 
   .lang-picker {
     width: 80px;
+    max-width: calc(100vw - 16px);
     font-size: 12px;
   }
 
